@@ -357,8 +357,8 @@ AT_DATA([prog.cob], [
 #        default.conf will allow it (with a warning)
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [0], [],
-[prog.cob: 7: warning: initial VALUE clause ignored for REDEFINES item
-prog.cob: 9: warning: initial VALUE clause ignored for REDEFINES item
+[prog.cob: 7: warning: initial VALUE clause ignored for REDEFINES item 'A'
+prog.cob: 9: warning: initial VALUE clause ignored for REDEFINES item 'G'
 ])
 AT_CHECK([$COMPILE -frelax-syntax-checks prog.cob], [0], [], [])
 
